@@ -12,9 +12,3 @@ matrix:
     dist: trusty
   - perl: "5.16"
     dist: trusty
-  - perl: "5.14"
-    dist: trusty
-  - perl: "5.12"
-    dist: trusty
-  - perl: "5.10"
-    dist: trusty
