@@ -1,7 +1,0 @@
-requires 'perl'        => '5.010001';
-requires 'Carp';
-requires 'Mojolicious' => '7.37';
-requires 'POE'         => '1.366';
-requires 'Scalar::Util';
-test_requires 'IO::Socket::INET';
-test_requires 'Test::More' => '0.88';
