@@ -5,7 +5,7 @@ copyright_holder = Dan Book
 copyright_year   = 2015
 
 [@Author::DBOOK]
-:version = 0.032
+:version = v1.0.3
 installer = ModuleBuildTiny::Fallback
 pod_tests = 1
-irc = irc://irc.freenode.net/#mojo
+irc = ircs://irc.libera.chat/#mojo
